force-app/main/default/objects/Lead/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Spoke To Dropped Leaflet Closed Down</description>
    <inlineHelpText>Spoke To Dropped Leaflet Closed Down</inlineHelpText>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Spoke To</fullName>
            </value>
            <value>
                <fullName>Dropped Leaflet</fullName>
            </value>
            <value>
                <fullName>Closed Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>