force-app/main/default/objects/Lead/fields/PartnershipReferredBy2__c.field-meta.xml
<CustomField>
    <fullName>PartnershipReferredBy2__c</fullName>
    <label>Partnership referred by</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetName>Partnership_referred_by</valueSetName>
    </valueSet>
</CustomField>