force-app/main/default/objects/Lead/fields/Person_Spoken_with__c.field-meta.xml
<CustomField>
    <fullName>Person_Spoken_with__c</fullName>
    <description>Person the BA spoke and obtained information from</description>
    <label>Person Spoken with</label>
    <length>80</length>
    <type>Text</type>
</CustomField>