force-app/main/default/objects/Lead/fields/Procurement_Company__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Company__c</fullName>
    <label>Procurement Company</label>
    <length>30</length>
    <type>Text</type>
</CustomField>