force-app/main/default/objects/Lead/fields/Round_Robin_ID__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin_ID__c</fullName>
    <formula>IF(NOT(ISPICKVAL( Type__c , &quot;eCommerce Sign-up&quot;)), 1 +MOD(VALUE(Lead_Number__c), 4), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Round Robin Lead Assignment Field</inlineHelpText>
    <label>Round Robin ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>