force-app/main/default/objects/Lead/fields/Sales_per_annum__c.field-meta.xml
<CustomField>
    <fullName>Sales_per_annum__c</fullName>
    <label>Sales per annum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>