force-app/main/default/objects/Lead/fields/Send_Me_Sacks_Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Send_Me_Sacks_Form_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not manually tick this box. It is used in the auto-conversion process. When the form is completed, this field is ticked on the Pardot form handler. This field is mapped to the account record in Salesforce. It&apos;s used to send the correct email template to customer service.</description>
    <inlineHelpText>Do not manually tick this box. It is used in the auto-conversion process. When the form is completed, this field is ticked on the Pardot form handler. This field is mapped to the account record in Salesforce. It&apos;s used to send the correct email template</inlineHelpText>
    <label>Send Me Sacks Form Complete</label>
    <type>Checkbox</type>
</CustomField>