force-app/main/default/objects/Lead/fields/Services_interested_in__c.field-meta.xml
<CustomField>
    <fullName>Services_interested_in__c</fullName>
    <description>What services are they interested in getting a quote for.</description>
    <label>Services interested in</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mixed recycling</fullName>
            </value>
            <value>
                <fullName>General waste</fullName>
            </value>
            <value>
                <fullName>Cardboard stickers</fullName>
            </value>
            <value>
                <fullName>Confidential</fullName>
            </value>
            <value>
                <fullName>Food waste</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>WEEE</fullName>
            </value>
            <value>
                <fullName>Toner</fullName>
            </value>
            <value>
                <fullName>Battery</fullName>
            </value>
            <value>
                <fullName>Light bulb</fullName>
            </value>
            <value>
                <fullName>Stationery</fullName>
            </value>
            <value>
                <fullName>Clothes</fullName>
            </value>
            <value>
                <fullName>Cooking oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>