force-app/main/default/objects/Lead/fields/Services_wanted__c.field-meta.xml
<CustomField>
    <fullName>Services_wanted__c</fullName>
    <label>Services wanted;</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services</valueSetName>
    </valueSet>
</CustomField>