force-app/main/default/objects/Lead/fields/Signed_up_for_direct__c.field-meta.xml
<CustomField>
    <fullName>Signed_up_for_direct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed up for direct</label>
    <type>Checkbox</type>
</CustomField>