force-app/main/default/objects/Lead/fields/Signed_up_to_BID_scheme__c.field-meta.xml
<CustomField>
    <fullName>Signed_up_to_BID_scheme__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Signed up to BID scheme</label>
    <type>Checkbox</type>
</CustomField>