force-app/main/default/objects/Lead/fields/Submitted_At__c.field-meta.xml
<CustomField>
    <fullName>Submitted_At__c</fullName>
    <description>LINKEDIN DATA</description>
    <label>Submitted At</label>
    <length>100</length>
    <type>Text</type>
</CustomField>