force-app/main/default/objects/Lead/fields/Topic_Interest__c.field-meta.xml
<CustomField>
    <fullName>Topic_Interest__c</fullName>
    <description>Topics that the prospect has expressed an interest in.</description>
    <label>Topic Interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
                <label>Environment/CSR</label>
            </value>
            <value>
                <fullName>Compliance</fullName>
                <label>Compliance/reporting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>