force-app/main/default/objects/Lead/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>How did they contact us?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>eCommerce Sign-up</fullName>
            </value>
            <value>
                <fullName>Inbound Email</fullName>
            </value>
            <value>
                <fullName>Inbound Phone</fullName>
            </value>
            <value>
                <fullName>Inbound Website Enquiry</fullName>
            </value>
            <value>
                <fullName>Outbound Contact</fullName>
            </value>
            <value>
                <fullName>Paid Social In-Platform</fullName>
            </value>
            <value>
                <fullName>Website Live-chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>