force-app/main/default/objects/Lead/fields/Year_created__c.field-meta.xml
<CustomField>
    <fullName>Year_created__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year created</label>
    <type>Date</type>
</CustomField>