force-app/main/default/objects/Lead/listViews/Adwords.listView-meta.xml
<ListView>
    <fullName>Adwords</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>gaconnector_First_Click_Term__c</columns>
    <columns>gaconnector_Last_Click_Term__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GCLID__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>4/1/2024 12:00 AM</value>
    </filters>
    <label>Adwords</label>
</ListView>