force-app/main/default/objects/Lead/listViews/Field_leads.listView-meta.xml
<ListView>
    <fullName>Field_leads</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>Comments__c</columns>
    <columns>Level_of_Interest__c</columns>
    <columns>Field_Sales_FirstName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_of_Interest__c</field>
        <operation>equals</operation>
        <value>1,2,3,4,5,6,7,8,9,10</value>
    </filters>
    <filters>
        <field>Field_Sales_FirstName__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Field leads</label>
</ListView>