force-app/main/default/objects/Lead/listViews/Hannah_BIDS.listView-meta.xml
<ListView>
    <fullName>Hannah_BIDS</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.FIRST_NAME</field>
        <operation>equals</operation>
        <value>BID</value>
    </filters>
    <label>Hannah BIDS</label>
</ListView>