force-app/main/default/objects/Lead/listViews/Inbound_Open_Lead_Assignment.listView-meta.xml
<ListView>
    <fullName>Inbound_Open_Lead_Assignment</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>9/1/2020 12:00 AM</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>equals</operation>
        <value>Open (Not Contacted),Working (contacted)</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Allen,Choda,website</value>
    </filters>
    <label>Inbound Open Lead Assignment</label>
</ListView>