force-app/main/default/objects/Lead/listViews/Inbound_Web_Enquiries.listView-meta.xml
<ListView>
    <fullName>Inbound_Web_Enquiries</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Working (contacted),Closed. Converted,Closed. Cannot Serve,Closed. Not Won,Closed. Closed Down,Closed. Existing customer,Closed. Directed to RecycleBox Website</value>
    </filters>
    <filters>
        <field>LEAD.CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>FULL_NAME</field>
        <operation>notContain</operation>
        <value>FINE</value>
    </filters>
    <filters>
        <field>LEAD.LEAD_SOURCE</field>
        <operation>equals</operation>
        <value>Google Adwords,Website,PPC</value>
    </filters>
    <label>Outstanding Web Enquiries</label>
    <queue>Inbound_website</queue>
</ListView>