force-app/main/default/objects/Lead/listViews/Islington_strike_action_email.listView-meta.xml
<ListView>
    <fullName>Islington_strike_action_email</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <label>Islington strike action email</label>
</ListView>