force-app/main/default/objects/Lead/listViews/Marylebone_High_Street.listView-meta.xml
<ListView>
    <fullName>Marylebone_High_Street</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Notes__c</columns>
    <columns>fine_status__c</columns>
    <columns>Field_Sales_Visited__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.STREET</field>
        <operation>contains</operation>
        <value>marylebone</value>
    </filters>
    <label>Marylebone High Street</label>
</ListView>