force-app/main/default/objects/Lead/listViews/My_unconverted_leads.listView-meta.xml
<ListView>
    <fullName>My_unconverted_leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>0800,Website</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed. Converted,Closed. Cannot Serve,Closed. Not Won,Closed. Closed Down</value>
    </filters>
    <label>My unconverted inbound leads</label>
</ListView>