force-app/main/default/objects/Lead/listViews/Office_Project_2014.listView-meta.xml
<ListView>
    <fullName>Office_Project_2014</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>IS_EMAIL_ADDRESS_BOUNCED</columns>
    <filterScope>Everything</filterScope>
    <label>Office Project 2014</label>
</ListView>