force-app/main/default/objects/Lead/listViews/Open_Leads.listView-meta.xml
<ListView>
    <fullName>Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>gaconnector_First_Click_Landing_Page__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CreateDate__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Inbound Website Enquiry</value>
    </filters>
    <label>Open Leads</label>
</ListView>