force-app/main/default/objects/Lead/listViews/Owen_list_of_leads_to_review.listView-meta.xml
<ListView>
    <fullName>Owen_list_of_leads_to_review</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>Level_of_Interest__c</columns>
    <columns>Notes__c</columns>
    <columns>Field_Sales_Visited__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Level_of_Interest__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Owen list of leads to review</label>
</ListView>